--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ h2 {
 
 a {
   text-decoration: none;
+
 }
 
 /***** GRID *****/
@@ -133,9 +134,18 @@ nav ul li a {
 #contact ul li{
   display: inline-block;
   text-align: center;
+  padding: 0 40px;
 }
 
 #contact ul li a {
   text-decoration: none;
   padding-left: 10px; 
+}
+
+
+
+/***** PROJECT PAGE SECTION *****/
+#about-project {
+  padding: 25px;
+  text-align: center;
 }
